crates/wac-parser/tests/resolution/fail/duplicate-resource-constructor.wac
interface foo {
    resource x {
        constructor();
        constructor(x: u32);
    }
}